# pipelines_rj_sms

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  dbt_log.txt  local_run.py  localrun.cases.yaml  localrun.cases.yaml.orig  localrun.py  payload.json  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: notifica--o-de-problema.md  requerimento-de-funcionalidade.md
.github/workflows/: build_docker.yaml  cd.yaml  cd_staging.yaml  code-tree-analysis.yaml  lint.yaml
.github/workflows/scripts/: delete_ghost_flows.py  register_flows.py  replace_infisical_data.py
pipelines/: constants.py  flows.py  tasks.py
pipelines/crawler_sisreg/: flows.py  tasks.py
pipelines/datalake/utils/: data_transformations.py  tasks.py
pipelines/dump_api_vitacare/: constants.py  flows.py  flows_test.py  schedules.py  tasks.py  utils.py
pipelines/dump_api_vitacare/utils/: schedules.py
pipelines/dump_api_vitai/: constants.py  flows.py  schedules.py  tasks.py
pipelines/dump_azure_blob_tpc/: constants.py
pipelines/dump_db_smsrio/: constants.py  flows.py  schedules.py  tasks.py
pipelines/dump_ftp_cnes/: __init__.py  flows.py  run.py  tasks.py
pipelines/dump_sisreg/: flows.py
pipelines/dump_url/: flows.py  schedules.py
pipelines/execute_dbt/: __init__.py  constants.py  flows.py  schedules.py  tasks.py
pipelines/exemplo/: __init__.py
pipelines/exemplo/nome_do_objetivo/: flows.py
pipelines/exemplo/test_execute_dbt/: flows.py  run.py
pipelines/misc/historical_mrg/: flows.py  tasks.py
pipelines/misc/historical_vitai_db/: constants.py  flows.py  tasks.py
pipelines/prontuarios/: constants.py
pipelines/prontuarios/load_datalake/: constants.py  flows.py  schedules.py  tasks.py
pipelines/prontuarios/mrg/: constants.py  flows.py  functions.py  merged_teste.csv  ranking.py  schedules.py  tasks.py
pipelines/prontuarios/std/: logradouros.csv  utils.py
pipelines/prontuarios/utils/: misc.py  tasks.py  validation.py
pipelines/reports/alerta_atualizacao_tabelas/: flows.py  schedules.py  tasks.py
pipelines/test_execute_dbt/: __init__.py
pipelines/tests/: flows.py  tasks.py
pipelines/tmp/: flows.py  tasks.py
pipelines/utils/: basics.py  credential_injector.py  data_cleaning.py  datalake_hub.py  dbt.py  dbt_log_processor.py  flow.py  google_drive.py  googleutils.py  infisical.py  logger.py  monitor.py  prefect.py  progress.py  schedules.py  sms.py  state_handlers.py  stored_variable.py  tasks.py  time.py
queries/: profiles.yml
scripts/smsrio/: initial_injestion.py
tests/dbt/: test_classify_access.py
upload/POSTGRES/: atendimento.csv
(+529 files in other folders)
